  with some external tools that keep the catalogue in memory to perform
  different operations on it.
- fixed bug in the routine that detects existing slices to warn the user
  and/or avoid overwriting, bug that lead dar to "bark" when an archive
  base name started by a + character.
- avoiding to use AM_PATH_GPGME in configure script when gpgme.m4 is not
  available

from 2.5.2 to 2.5.3
- Fixing a 2.5.x build issue met when a 2.4.x libdar library is already
  installed in an FreeBSD system.
- Improving message and behavior of libdar in lax mod when a truncated
  archive is read
- Fixing self reported bug at "tronconneuse.cpp line 561" met while
  reading truncated/corrupted archive
- Fixed not closed filedescriptors, met when saving a filesystem that has
  not ExtX FSA available
- Fixing configure script to be more robust in front of system where
  gpgme.h is installed in a non standard path and user did not provide
  coherent CPPFLAGS, LDFLAGS before calling ./configure
- Displaying CRC values when listing isolated catalog as XML output
- Fixing compilation issue when system does not provide strerror_r() call
- Avoiding warning about FSA absence when fsa-scope is set to "none"
- Adding --disable-fadvise option to configure script for those that want
  back full pressure from dar on the system cache (same behavior as 2.4.x)
- Fixing bug, fadvise() called a wrong time making it having no effect
- updating FAQ about comparative performance from 2.4.x to 2.5.x
- optimization: reduced the number of call to dup() at libdar startup
- improvement: printing file type on verbose output
- new feature: added %t macro reflecting the inode type in dar's
  --backup-hook-execute option

from 2.5.1 to 2.5.2
- fixed bug met when permission is denied while reading or writing slices
- fixing bug that avoided creating an archive at the root of the filesystem
- fixing bug met in rare situation while reading in sequential-read mode